// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`formatRouteGuardReviewPeerAbsorptionAck given: [case4] the rendered body, whole when: [t0] an URGENT concede lands on a spent lane then: the bytes a driver reads are pinned 1`] = `
"🦉 so it is

🗿 route.stone.set --as conceded --severity urgent
   ├─ stone = 5.1.execution
   ├─ with  = ergonomist (l1), 4 rounds, 4 budget — budget spent
   ├─ about = blocker.1 — the last concern this lane owed
   ├─ warn  = ships harm — tell your human why this stone bought budget
   │
   └─ fix the blocker, buy the round, then re-arrive
      ├─ rhx route.guard.budget --for review --add 2 --peer ergonomist --stone 5.1.execution
      └─ rhx route.stone.set --stone 5.1.execution --as passed"
`;

exports[`formatRouteGuardReviewPeerAbsorptionAck given: [case4] the rendered body, whole when: [t0b] a BETTER concede lands on a spent lane then: the bytes a driver reads are pinned 1`] = `
"🦉 so it is

🗿 route.stone.set --as conceded --severity better
   ├─ stone = 5.1.execution
   ├─ with  = ergonomist (l1), 4 rounds, 4 budget — budget spent
   ├─ about = blocker.1 — the last concern this lane owed
   │
   └─ fix the blocker, then re-arrive
      └─ rhx route.stone.set --stone 5.1.execution --as passed"
`;

exports[`formatRouteGuardReviewPeerAbsorptionAck given: [case4] the rendered body, whole when: [t1] a dispute lands then: the bytes a driver reads are pinned 1`] = `
"🦉 so it is

🗿 route.stone.set --as disputed
   ├─ stone = 5.1.execution
   ├─ with  = architect (l1), 2 rounds, 4 budget — 2 rounds left
   ├─ about = blocker.1 — 2 more on this lane
   ├─ why   = .fulcrums/inventory.of=fulcrums.case=F007-file-placement.md
   │
   └─ the council will read it
      └─ absorb the 2 concerns still owed, then drive on"
`;
